# claudia

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.claude/agents/: code-reviewer.md  doc-updater.md  nextflow-reviewer.md
.claude/commands/: nextflow-review.md  pr-review.md  prepare-docstrings.md  pytest-gen.md  python-review.md  type-annotate.md  update-docs.md
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  doc-updater.agent.md
claudia/: README.md
claudia/.claude-plugin/: plugin.json
claudia/agents/: code-explorer.md  code-reviewer.md  domain-reviewer.md  pr-reviewer.md  researcher.md
claudia/commands/: claudia.md
claudia_tools/: README.md  pyproject.toml
claudia_tools/src/claudia_tools/: __init__.py  cli.py  config.py  detect.py  env.py  gates.py  markers.py  output.py  phase.py  state.py  templates.py  verification.py
claudia_tools/src/claudia_tools/data/: ENVIRONMENT.md.template  ISSUE_BRIEF.md.template  STATE.md.template  VERIFICATION.md.template  __init__.py  config-default.json
claudia_tools/tests/: conftest.py  test_cli.py  test_config.py  test_detect.py  test_env.py  test_gates.py  test_markers.py  test_output.py  test_phase.py  test_state.py  test_templates.py  test_verification.py
commands/: pr-review.md
docs/: INDEX.md
plugins/claudia/: README.md  config.template.json
plugins/claudia-workflow/: README.md  config.template.json
prompts/: nextflow-review.prompt.md  pr-review.prompt.md  pytest-gen.prompt.md  python-review.prompt.md  update-docs.prompt.md
(+180 files in other folders)
